[workspace]
resolver = "2"
members = [
  "bindings/c",
  "bindings/wasm",
  "bottomless",
  "bottomless-cli",
  "libsql",
  "libsql-ffi",
  "libsql-hrana",
  "libsql-replication",
  "libsql-server",
  "libsql-sys",
  "vendored/rusqlite",
  "vendored/sqlite3-parser",
  "xtask",
]

exclude = [
    "./libsql-sqlite3/ext/crr",
    "./libsql-sqlite3/ext/libsql-wasi",
    "libsql-shell",
    "tools/rebuild-log",
    "tools/fuzz",
]

[workspace.package]
version = "0.9.29"
authors = ["the libSQL authors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/tursodatabase/libsql"

[workspace.dependencies]
libsql-ffi = { path = "libsql-ffi", version = "0.9.29" }
libsql-sys = { path = "libsql-sys", version = "0.9.29", default-features = false }
libsql-hrana = { path = "libsql-hrana", version = "0.9.29" }
libsql_replication = { path = "libsql-replication", version = "0.9.29" }
rusqlite = { package = "libsql-rusqlite", path = "vendored/rusqlite", version = "0.9.29", default-features = false, features = [
    "libsql-experimental",
    "column_decltype",
    "load_extension",
    "modern_sqlite",
    "functions",
    "limits",
    "hooks",
] }
hyper = { version = "0.14" }
tower = { version = "0.4.13" }
zerocopy = { version = "0.7.32", features = ["derive", "alloc"] }

[profile.release]
codegen-units = 1
panic = "unwind"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

