[package]
name = "bottomless-cli"
version = "0.1.14"
edition = "2021"
license = "MIT"
keywords = ["libsql", "sqlite", "s3", "cli", "replication"]
repository = "https://github.com/tursodatabase/libsql"
description = "Command-line interface for bottomless replication for libSQL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-compression = { version = "0.4.4", features = ["tokio", "gzip", "zstd"] }
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-types = "1"
bottomless = { version = "0", path = "../bottomless" }
bytes = "1"
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
tokio = { version = "1.23.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = "1.4.1"
rusqlite = { workspace = true }

[package.metadata.dist]
dist = false
