[workspace]
resolver = "2"
members = [
  "core",
  "bindings/c",
  "bindings/wasm",
  "replication",
  "libsql-sys",
  "libsql-shell",
  "wasmtime-bindings",
]

[profile.release]
codegen-units = 1
panic = "abort"

[patch.crates-io]
tonic = { git = "https://github.com/hyperium/tonic" }
tonic-web = { git = "https://github.com/hyperium/tonic", branch = "lucio/grpc-web-client" }
tonic-build = { git = "https://github.com/hyperium/tonic" }
tower-http = { git = "https://github.com/tower-rs/tower-http", branch = "lucio/grpc-defaults" }
