[package]
name = "libsql-client"
version = "0.5.1"
edition = "2021"
license = "Apache-2.0"
description = "HTTP-based client for libSQL and sqld"
keywords = ["libsql", "sqld", "database", "driver", "http"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
base64 = "0.21.0"
num-traits = "0.2.15"
serde_json = "1.0.91"
worker = { version = "0.0.12", optional = true }
anyhow = "1.0.69"
async-trait = "0.1.64"
reqwest = { version = "0.11.14", optional = true, default-features = false, features = ["rustls-tls"] }
rusqlite = { version = "0.28.0", optional = true, default-features = false, features = [
    "buildtime_bindgen",
    "column_decltype"
] }

[features]
default = ["local_backend", "reqwest_backend"]
workers_backend = ["worker"]
reqwest_backend = ["reqwest"]
local_backend = ["rusqlite"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
libsql-client = { path = ".", features = ["reqwest_backend", "local_backend"] }
rand = "0.8.5"

[[example]]
name = "select"
path = "examples/select.rs"

[[example]]
name = "connect_from_env"
path = "examples/connect_from_env.rs"

[workspace]
