[package]
name = "libsql-ffi"
version = "0.2.1"
edition = "2021"
build = "build.rs"
license = "MIT"
description = "Native bindings to libSQL"
repository = "https://github.com/tursodatabase/libsql"
exclude = ["bundled/SQLite3MultipleCiphers/build", "bundled/SQLite3MultipleCiphers/test"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsql-wasmtime-bindings = { version = "0.2.1", optional = true }

[build-dependencies]
bindgen = "0.66.1"
cc = "1.0"

[features]
session = []
wasmtime-bindings = ["dep:libsql-wasmtime-bindings"]
multiple-ciphers = []
