[package]
name = "libsql-ffi"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native bindings to libSQL"
build = "build.rs"
exclude = [
  "bundled/SQLite3MultipleCiphers/build",
  "bundled/SQLite3MultipleCiphers/test",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsql-wasmtime-bindings = { version = "0.2.1", optional = true }

[build-dependencies]
cmake = "0.1.54"
bindgen = "0.66.1"
cc = "1.0"
glob = "0.3"

[features]
session = []
wasmtime-bindings = ["dep:libsql-wasmtime-bindings"]
multiple-ciphers = []
bundled-sqlcipher = []
bundled-sqlcipher-vendored-openssl = []
with-asan = []
wasm32-wasi-vfs = []
unlock_notify = []
preupdate_hook = []
sqlcipher = []
sqlean-extension-uuid = []
sqlean-extension-crypto = []
sqlean-extension-fuzzy = []
sqlean-extension-math = []
sqlean-extension-stats = []
sqlean-extension-text = []
sqlean-extension-regexp = []
sqlean-extensions = [
  "sqlean-extension-uuid",
  "sqlean-extension-crypto",
  "sqlean-extension-fuzzy",
  "sqlean-extension-math",
  "sqlean-extension-stats",
  "sqlean-extension-text",
  "sqlean-extension-regexp",
]
libsql-disable-checkpoint-downgrade = []
libsql-checkpoint-only-full= []
