[package]
name = "libsql-hrana"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "hrana protocol for libsql"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
prost = { version = "0.12" }
base64 = { version = "0.21" }
bytes = "1"

[dev-dependencies]
serde_json = "1.0"

