[package]
name = "libsql-hrana"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Remote protocol for libSQL"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
prost = { version = "0.12" }
base64 = { version = "0.21" }
bytes = "1"

[dev-dependencies]
serde_json = "1.0"

