[package]
name = "libsql-replication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.10.0", features = ["tls"] }
prost = "0.12"
sqld-libsql-bindings = { path = "../libsql-sys-tmp"}
parking_lot = "0.12.1"
bytemuck = { version = "1.13.0", features = ["derive"] }
bytes = { version = "1.5.0", features = ["serde"] } 
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.49"
tracing = "0.1.40"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
async-trait = "0.1.74"
uuid = { version = "1.5.0", features = ["v4"] }
tokio-util = "0.7.9"
async-stream = "0.3.5"
 
[dev-dependencies]
arbitrary = { version = "1.3.0", features = ["derive_arbitrary"] }
bincode = "1.3.3"
tempfile = "3.8.0"
prost-build = "0.12.0"
tonic-build = "0.10"
