[package]
name = "libsql_replication"
version = "0.2.0"
edition = "2021"
description = "libSQL replication protocol"
repository = "https://github.com/tursodatabase/libsql"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.74"
bytes = { version = "1.5.0", features = ["serde"] } 
libsql-sys = { path = "../libsql-sys", default-features = false, features = ["wal", "rusqlite", "api"] }
once_cell = "1.17.0"
parking_lot = "0.12.1"
prost = "0.12"
rusqlite = { workspace = true }
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.9"
tonic = { version = "0.10.0", features = ["tls"] }
tracing = "0.1.40"
uuid = { version = "1.5.0", features = ["v4"] }
zerocopy = { version = "0.7.28", features = ["derive"] }
 
[dev-dependencies]
arbitrary = { version = "1.3.0", features = ["derive_arbitrary"] }
bincode = "1.3.3"
tempfile = "3.8.0"
prost-build = "0.12.0"
tonic-build = "0.10"
