[package]
name = "libsql_replication"
version = "0.3.1"
edition = "2021"
description = "libSQL replication protocol"
repository = "https://github.com/tursodatabase/libsql"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
libsql-sys = { version = "0.5", path = "../libsql-sys", default-features = false, features = ["wal", "rusqlite", "api"] }
rusqlite = { workspace = true }
parking_lot = "0.12.1"
bytes = { version = "1.5.0", features = ["serde"] } 
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.49"
tracing = "0.1.40"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
async-trait = "0.1.74"
uuid = { version = "1.5.0", features = ["v4"] }
tokio-util = "0.7.9"
async-stream = "0.3.5"
zerocopy = { version = "0.7.28", features = ["derive"] }
aes = "0.8.3"
cbc = "0.1.2"
 
[dev-dependencies]
arbitrary = { version = "1.3.0", features = ["derive_arbitrary"] }
bincode = "1.3.3"
tempfile = "3.8.0"
prost-build = "0.12"
tonic-build = "0.11"

[features]
encryption = ["libsql-sys/encryption"]
