[package]
name = "libsql-server"
version = "0.24.4"
edition = "2021"
default-run = "sqld"

[[bin]]
name = "sqld"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.66"
async-lock = "2.6.0"
async-stream = "0.3.5"
async-tempfile = "0.4.0"
async-trait = "0.1.58"
axum = { version = "0.6.18", features = ["headers"] }
axum-extra = "0.7"
base64 = "0.21.0"
bincode = "1.3.3"
bottomless = { version = "0", path = "../bottomless", features = ["libsql_linked_statically"] }
bytes = { version = "1.2.1", features = ["serde"] }
bytesize = { version = "1.2.0", features = ["serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.0.23", features = [ "derive", "env", "string" ] }
console-subscriber = { git = "https://github.com/tokio-rs/console.git", rev = "5a80b98", optional = true }
crc = "3.0.0"
enclose = "1.1"
fallible-iterator = "0.3.0"
futures = "0.3.25"
futures-core = "0.3"
hmac = "0.12"
hyper = { version = "0.14.23", features = ["http2"] }
hyper-rustls = { git = "https://github.com/rustls/hyper-rustls.git", rev = "163b3f5" }
hyper-tungstenite = "0.11"
itertools = "0.10.5"
jsonwebtoken = "9"
libsql = { path = "../libsql/", optional = true }
libsql_replication = { path = "../libsql-replication" }
metrics = "0.21.1"
metrics-util = "0.15"
metrics-exporter-prometheus = "0.12.2"
# mimalloc = { version = "0.1.36", default-features = false }
moka = { version = "0.12.1", features = ["future", "sync"] }
nix = { version = "0.26.2", features = ["fs"] }
once_cell = "1.17.0"
parking_lot = "0.12.1"
pin-project-lite = "0.2.13"
priority-queue = "1.3"
prost = "0.12"
rand = "0.8"
regex = "1.7.0"
reqwest = { version = "0.11.16", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { workspace = true }
rustls = "0.21.7"
rustls-pemfile = "1.0.3"
semver = "1.0.18"
serde = { version = "1.0.149", features = ["derive", "rc"] }
serde_json = { version = "1.0.91", features = ["preserve_order"] }
md-5 = "0.10"
sha2 = "0.10"
sha256 = "1.1.3"
libsql-sys = { path = "../libsql-sys", features = ["wal"], default-features = false }
libsql-hrana = { path = "../libsql-hrana" }
sqlite3-parser = { package = "libsql-sqlite3-parser", path = "../vendored/sqlite3-parser", version = "0.11.0", default-features = false, features = [ "YYNOERRORRECOVERY" ] }
tempfile = "3.7.0"
thiserror = "1.0.38"
tokio = { version = "1.22.2", features = ["rt-multi-thread", "net", "io-std", "io-util", "time", "macros", "sync", "fs", "signal"] }
tokio-stream = "0.1.11"
tokio-tungstenite = "0.20"
tokio-util = { version = "0.7.8", features = ["io", "io-util"] }
tonic = { version = "0.10.0", features = ["tls"] }
tonic-web = "0.10"
tower = { version = "0.4.13", features = ["make"] }
tower-http = { version = "0.3.5", features = ["compression-full", "cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
http-body = "0.4"
url = { version = "2.3", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde", "v7"] }
aes = { version = "0.8.3", optional = true }
cbc = { version = "0.1.2", optional = true }
zerocopy = { version = "0.7.28", features = ["derive", "alloc"] }
hashbrown = { version = "0.14.3", features = ["serde"] }
hdrhistogram = "7.5.4"
crossbeam = "0.8.4"
async-recursion = "1"

[dev-dependencies]
arbitrary = { version = "1.3.0", features = ["derive_arbitrary"] }
aws-config = "0.55"
aws-sdk-s3 = "0.28"
env_logger = "0.10"
hyper = { version = "0.14", features = ["client"] }
insta = { version = "1.26.0", features = ["json"] }
libsql = { path = "../libsql/"}
libsql-client = { version = "0.6.5", default-features = false, features = ["reqwest_backend"] }
proptest = "1.0.0"
rand = "0.8.5"
tempfile = "3.7.0"
turmoil = "0.6.0"
url = "2.3"
metrics-util = "0.15"
s3s = "0.8.1"
s3s-fs = "0.8.1"
ring = { version = "0.17.8", features = ["std"] }

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] }

[features]
default = []
debug-tools = ["console-subscriber", "rusqlite/trace", "tokio/tracing"]
wasm-udfs = ["rusqlite/libsql-wasm-experimental"]
unix-excl-vfs = ["libsql-sys/unix-excl-vfs"]
encryption = ["dep:aes", "dep:cbc", "libsql-sys/encryption", "libsql_replication/encryption", "bottomless/encryption"]
test-encryption = ["libsql/encryption"]
