[package]
name = "libsql-storage-server"
version = "0.23.0"
edition = "2021"
default-run = "libsql-storage-server"

[[bin]]
name = "libsql-storage-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.66"
bytes = "1.5.0"
clap = { version = "4.0.23", features = [ "derive", "env", "string" ] }
libsql-storage = { path = "../libsql-storage" }
redis = "0.25.3"
tokio = { version = "1.22.2", features = ["rt-multi-thread", "net", "io-std", "io-util", "time", "macros", "sync", "fs", "signal"] }
tonic = { version = "0.10.0", features = ["tls"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] }

