[package]
name = "libsql-storage-server"
version = "0.0.1"
edition = "2021"
description = "libSQL Storage Server"
repository = "https://github.com/tursodatabase/libsql"
license = "MIT"
publish = false
default-run = "libsql-storage-server"

[[bin]]
name = "libsql-storage-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.66"
bytes = "1.5.0"
clap = { version = "4.0.23", features = ["derive", "env", "string"] }
foundationdb = { version = "0.9.0", features = ["embedded-fdb-include", "fdb-7_3"], optional = true }
futures = "0.3.30"
libsql-storage = { path = "../libsql-storage" }
redis = "0.25.3"
tokio = { version = "1.22.2", features = ["rt-multi-thread", "net", "io-std", "io-util", "time", "macros", "sync", "fs", "signal"] }
tonic = { version = "0.10.0", features = ["tls"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
async-trait = "0.1.80"
serde = "1.0.203"
thiserror = "1.0.61"
prost = "0.12.6"

[features]
foundation-db = ["foundationdb"]

[dev-dependencies]

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] }

