[package]
name = "libsql-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"

[dev-dependencies]
prost-build = "0.12.4"
tonic-build = "0.11.0"
